updated the UI and spaces

--- a/popup.html
+++ b/popup.html
@@ -31,7 +31,8 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <h1>Short Art - Your 5 sentence summary:</h1>
+    <h1>Short Art </h1>
+    <h2>Your 5 sentence summary:</h2>
     <h3> Powered by Aylien API</h3>
     <div id="status"></div>
     <img id="image-result" hidden>
